# ZKretSanta

./: .gitignore  Cargo.toml  README.md
santazk/: Cargo.toml
santazk/params/: choice_auth.groth16.vk  reveal_auth.groth16.vk
santazk/src/: crypto.rs  lib.rs  serialization.rs
santazk/src/circuits/: mod.rs
santazk/src/hash/: common.rs  mod.rs  pedersen_params.rs  serialization.rs
santazk/src/merkle/: mod.rs
santazk/src/proofs/: mod.rs
scripts/: anr.sh  install.sh  vm.sh
zkretvm/: Cargo.toml
zkretvm/src/: lib.rs
zkretvm/src/api/: chain_handlers.rs  mod.rs  static_handlers.rs
zkretvm/src/block/: mod.rs  transaction.rs
zkretvm/src/client/: mod.rs
zkretvm/src/genesis/: mod.rs
zkretvm/src/state/: mod.rs  zkret_state.rs
zkretvm/src/vm/: mod.rs
