[package]
name = "santazk"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["merkle_tree", "crh", "r1cs"] }
ark-ec = "0.4.2"
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs"] }
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
